# Sandbox

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md  TODO.txt
flatpak/: com.mechanikadesign.Sandbox [conflicted].desktop  com.mechanikadesign.Sandbox [conflicted].json  com.mechanikadesign.Sandbox.appdata.xml  com.mechanikadesign.Sandbox.desktop  com.mechanikadesign.Sandbox.json  com.mechanikadesign.Sandbox.metainfo [conflicted].xml  com.mechanikadesign.Sandbox.metainfo.xml  crate-sources.json
src/: main.rs  sandbox.rs  ui.rs
