[package]
name = "sandbox"
version = "1.1.0"
edition = "2018"

[dependencies]
pixels = { git = "https://github.com/parasyte/pixels", commit = "265ba2e5b3957bf3e5c17e6cde33df0ba0924d15" }
imgui = "0.4"
imgui-wgpu = "0.10.0"
imgui-winit-support = "0.4"
winit = "0.22"
rand = "0.7"
simdnoise = "3.1"
flume = { version = "0.7", default-features = false }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true